--- a/app.properties
+++ b/app.properties
@@ -1,2 +1,2 @@
 frontend.url = http://example.com/
-backend.rest = http://testapi.ovicko.com/v1/on-covid-19
+backend.rest = http://testapi.ovicko.com/api/v1/on-covid-19
